HYLT-145 - fix cart alignment on header

--- a/skin/frontend/carbon/hylete/css/header.css
+++ b/skin/frontend/carbon/hylete/css/header.css
@@ -169,7 +169,6 @@
 }
 
 #header .cart-icon-md {
-    top: -1px;
     position: relative;
 }
 
